# GpuComputeTest

./: .gitignore  JOURNAL.md  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/gpucomputetest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: local_reduce.comp  local_reduce.spv  reduce_optimized.comp  reduce_optimized.spv  tree_reduce.comp  tree_reduce.spv  vector_add.comp  vector_add.spv
app/src/main/cpp/: BaseComputeTask.cpp  BaseComputeTask.h  CMakeLists.txt  ComputeTask.h  CpuReduceTask.cpp  CpuReduceTask.h  GpuOptimizedReduceTask.cpp  GpuOptimizedReduceTask.h  GpuTreeReduceTask.cpp  GpuTreeReduceTask.h  LocalReduceTask.cpp  LocalReduceTask.h  VectorAddTask.cpp  VectorAddTask.h  VulkanContext.cpp  VulkanContext.h  native-lib.cpp
app/src/main/cpp/cmake/: spirv_to_header.cmake
app/src/main/java/com/example/gpucomputetest/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/gpucomputetest/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
